--- a/root/etc/nginx/nginx.postapocalypse.conf
+++ b/root/etc/nginx/nginx.postapocalypse.conf
@@ -7,15 +7,10 @@ http {
         ssl_certificate /run/secrets/site.crt;
         ssl_certificate_key /run/secrets/site.key;
 
-
         ssl_session_timeout 30m;
 
-        location /play/ {
-            proxy_pass http://127.0.0.1:3000/;
-        }
-
         location / {
-            root /www;
+            root /www.postapocalypse;
         }
     }
     server {
